添加网页图标

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="./static/favicon.svg">
+    <!-- <link rel ="shortcut icon" type="image/x-icon" href="./static/favicon.ico"> -->
     <title>vuedemo</title>
   </head>
   <body>
+    <!-- 项目模板: https://github.com/Aiden-L/Vue2Demo 感谢支持-->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
