--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <link rel ="shortcut icon" type="image/x-icon" href="./static/favicon.ico"> -->
     <title>vuedemo</title>
   </head>
-  <body>
+  <body style="margin: 0;padding: 0;">
     <!-- 项目模板: https://github.com/Aiden-L/Vue2Demo 感谢支持-->
     <div id="app"></div>
     <!-- built files will be auto injected -->
